Bug 638171 - FireFox does not read Java Plugin Info.plist correctly.; r=jst,joshmoz