modules/plugin/base/src/nsPluginTags.cpp
@@ -126,6 +126,8 @@ mVersion(aPluginInfo->fVersion),
 mLastModifiedTime(0),
 mFlags(NS_PLUGIN_FLAG_ENABLED)
 {
+  PRInt32 javaSentinelVariant = -1;
+
   if (aPluginInfo->fMimeTypeArray) {
     mMimeTypeArray = new char*[mVariants];
     for (int i = 0; i < mVariants; i++) {
@@ -136,11 +138,11 @@ mFlags(NS_PLUGIN_FLAG_ENABLED)
 
       if (mIsJavaPlugin) {
         if (strcmp(currentMIMEType, "application/x-java-vm-npruntime") == 0) {
-          // Stop processing here, any mimetypes after the magic "I'm a
-          // NPRuntime enabled Java plugin" mimetype will be ignored.
+          // This "magic MIME type" should not be exposed, but is just a signal
+          // to the browser that this is new-style java.
+          // Remove it and its associated MIME description from our arrays.
           mIsNPRuntimeEnabledJavaPlugin = PR_TRUE;
-          mVariants = i;
-          break;
+          javaSentinelVariant = i;
         }
       }
 
@@ -192,6 +194,8 @@ mFlags(NS_PLUGIN_FLAG_ENABLED)
       mExtensionsArray[i] = new_str(aPluginInfo->fExtensionArray[i]);
   }
   
+  RemoveJavaSentinel(javaSentinelVariant);
+
   EnsureMembersAreUTF8();
 }
 
@@ -223,6 +227,8 @@ mVersion(aVersion),
 mLastModifiedTime(aLastModifiedTime),
 mFlags(0) // Caller will read in our flags from cache
 {
+  PRInt32 javaSentinelVariant = -1;
+
   if (aVariants) {
     mMimeTypeArray        = new char*[mVariants];
     mExtensionsArray      = new char*[mVariants];
@@ -231,12 +237,7 @@ mFlags(0) // Caller will read in our flags from cache
       if (mIsJavaPlugin && aMimeTypes[i] &&
           strcmp(aMimeTypes[i], "application/x-java-vm-npruntime") == 0) {
         mIsNPRuntimeEnabledJavaPlugin = PR_TRUE;
-        
-        // Stop processing here, any mimetypes after the magic "I'm a
-        // NPRuntime enabled Java plugin" mimetype will be ignored.
-        mVariants = i;
-        
-        break;
+        javaSentinelVariant = i;
       }
       
       mMimeTypeArray[i]        = new_str(aMimeTypes[i]);
@@ -246,7 +247,9 @@ mFlags(0) // Caller will read in our flags from cache
         mIsJavaPlugin = PR_TRUE;
     }
   }
-  
+
+  RemoveJavaSentinel(javaSentinelVariant);
+
   if (!aArgsAreUTF8)
     EnsureMembersAreUTF8();
 }
@@ -582,4 +585,34 @@ void nsPluginTag::TryUnloadPlugin()
   if (mPluginHost) {
     RegisterWithCategoryManager(PR_FALSE, nsPluginTag::ePluginUnregister);
   }
+}
+
+void
+nsPluginTag::RemoveJavaSentinel(PRInt32 sentinelIndex)
+{
+  if (sentinelIndex == -1)
+    return;
+
+  delete[] mMimeTypeArray[sentinelIndex];
+  mMimeDescriptionArray.RemoveElementAt(sentinelIndex);
+  if (mExtensionsArray)
+    delete[] mExtensionsArray[sentinelIndex];
+
+  // Move the subsequent entries in the arrays.
+  if (mVariants > sentinelIndex + 1) {
+    memmove(mMimeTypeArray + sentinelIndex,
+            mMimeTypeArray + sentinelIndex + 1,
+            (mVariants - sentinelIndex - 1) * sizeof(mMimeTypeArray[0]));
+
+    if (mExtensionsArray) {
+      memmove(mExtensionsArray + sentinelIndex,
+              mExtensionsArray + sentinelIndex + 1,
+              (mVariants - sentinelIndex - 1) * sizeof(mExtensionsArray[0]));
+    }
+  }
+  --mVariants;
+
+  mMimeTypeArray[mVariants] = NULL;
+  if (mExtensionsArray)
+    mExtensionsArray[mVariants] = NULL;
 }
